<resources>

    <!-- === Common texts =============================================================================== -->

    <string name="app_name">Travel Agencies</string>
    <string name="desc_header_image">Header Image</string>

    <!-- === Confirmation Dialog ======================================================================== -->
    
    <string name="btn_confirm_confirm">Yes</string>
    <string name="btn_confirm_cancel">No</string>
    <string name="title_delete_agency">Delete Agency</string>
    <string name="msg_delete_agency">Are you sure that you wish to delete this travel agency?</string>
    
    <!-- === Main Screen ================================================================================= -->

    <string name="title_welcome">Welcome %1$s</string>
    <string name="btn_online">Online</string>
    <string name="btn_offline">Offline</string>
    <string name="lbl_json">JSON Format</string>

    <!-- === Menu  ====================================================================================== -->
    <string name="desc_menu_save">Save</string>
    <string name="desc_menu_delete">Delete</string>
    
    <!-- === Agency list screen  ======================================================================= -->
    <string name="title_agency_total">There are %1$d agencies</string>
    <string name="desc_agency_id">(Agency ID)</string>
    <string name="desc_agency_name">(Agency Name)</string>
    <string name="desc_agency_location">(Location)</string>
    
    <!-- === Agency detail screen  ======================================================================= -->
    <string name="lbl_agency_id">Agency ID</string>
    <string name="lbl_agency_name">Agency Name</string>
    <string name="lbl_agency_street">Street</string>
    <string name="lbl_agency_city">City</string>
    <string name="lbl_agency_country">Country</string>
    <string name="lbl_agency_url">URL</string>

    <!-- === General error messages  ======================================================================= -->

    <string name="err_odata_unexpected_param">Unexpected error occurred %1$s</string>
    <string name="err_odata_unexpected">Unexpected error occurred %1$s</string>
    
    <!-- === General messages  ======================================================================= -->

    <string name="msg_success_delete_agency_param">The travel agency %1$s has been deleted</string>
    <string name="msg_success_delete_agency">The travel agency has been deleted</string>
    <string name="msg_success_create_agency_param">The travel agency %1$s has been created</string>
    <string name="msg_success_update_agency_param">The travel agency %1$s has been modified</string>
    <string name="msg_success_update_agency">The travel agency has been modified</string>
    <string name="msg_success_flush_agency">Requests were sent successfully</string>
    <string name="msg_success_refresh_agency">Updates were received successfully</string>
    
</resources>